# moose-temperature-ssf

./: .gitignore  03_results.csv  README.md  moose-temperature-ssf.Rproj  qgis.qgz  requirements.txt
analysis/: 01_step_generation.qmd  02_sample_geographical_covariates.qmd  03_functions.R  03_parallel.R  03_parallel_log.txt  03_sampe_weather_covariates.qmd  03_sample_weather_covariates.qmd  04_harmonic_covariates.qmd  S2_boreal_inland.qmd
analysis/functions/: 03_functions.R
analysis/util/: styles.R
log/: worker_8311.txt  worker_8347.txt
smhi/: README.md  conn.py  main.py  models.py  multiprocessing.py  pyproject.toml  weather.py
smhi/seed/: __init__,py  station.py  station_data.py
smhi/smhi/: conn.py  main.py  models.py  weather.py
smhi/smhi/seed/: station.py  station_data.py
smhi/smhi/util/: multiprocessing.py  time.py
smhi/util/: multiprocessing.py
