[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smhi"
version = "0.1"
authors = [{name = "Niels", email = "ns.vandervegt@gmail.com"}]
description = "A Python package to interact with SMHI weather data"
requires-python = ">=3.12"
dependencies = []
